badges are functional

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "grommet": "^2.7.10",
     "grommet-icons": "^4.3.0",
     "pcln-design-system": "^2.6.1",
+    "pcln-modal": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-inlinesvg": "^1.1.7",
