--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL= https://staging-be-labs17-safe.herokuapp.com/
+#REACT_APP_API_URL= https://staging-be-labs17-safe.herokuapp.com/
+REACT_APP_API_URL= http://localhost:5000/labels/
