--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "sqlite3": "^4.1.0",
     "styled-components": "^4.4.0",
     "yup": "^0.27.0"
   },
