--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "webpack.config.js",
   "dependencies": {
     "axios": "^0.19.0",
+    "env-cmd": "^10.0.1",
     "formik": "^1.5.8",
     "grommet": "^2.7.10",
     "grommet-icons": "^4.3.0",
+    "mixpanel-browser": "^2.30.1",
     "pcln-design-system": "^2.6.1",
     "pcln-modal": "^2.1.1",
     "react": "^16.10.2",
