--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "grommet": "^2.7.10",
     "grommet-icons": "^4.3.0",
     "mixpanel-browser": "^2.30.1",
+    "moment": "^2.24.0",
     "pcln-design-system": "^2.6.1",
     "pcln-modal": "^2.1.1",
     "react": "^16.10.2",
@@ -21,6 +22,7 @@
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "sqlite3": "^4.1.0",
     "styled-components": "^4.4.0",
     "yup": "^0.27.0"
   },
